--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,27 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Hello world</h1>
+
+
+    <header>
+
+        <h1 class="header__title">PRAUD Thomas</h1>
+
+        <nav class="header__navbar"> 
+            <ul class="header__navbar__list">
+                <li class="header__navbar__list-item">About</li>
+                <li class="header__navbar__list-item">Works</li>
+                <li class="header__navbar__list-item">Skills</li>
+                <li class="header__navbar__list-item">Contact</li>
+            </ul>
+        </nav>
+    </header>
+
+
+
+
 </body>
+
 </html>
