--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <header>
 
+        <img src="img/1645613260021.png" alt="logo_portrait">
         <h1 class="header__title">PRAUD Thomas</h1>
 
         <nav class="header__navbar"> 
