--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
 
-        <img src="img/1645613260021.png" alt="logo_portrait">
+        <img class="header__logo" src="img/1645613260021.png" alt="logo_portrait">
         <h1 class="header__title">PRAUD Thomas</h1>
 
         <nav class="header__navbar"> 
@@ -26,7 +26,11 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <h1>test</h1>
 
+
+    </main>
 
 
 
