--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Roboto:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -15,19 +19,19 @@
     <header>
 
         <img class="header__logo" src="img/1645613260021.png" alt="logo_portrait">
-        <h1 class="header__title">PRAUD Thomas</h1>
+        <h1 class="header__title">Thomas PRAUD</h1>
 
         <nav class="header__navbar"> 
             <ul class="header__navbar__list">
-                <li class="header__navbar__list-item">About</li>
-                <li class="header__navbar__list-item">Works</li>
-                <li class="header__navbar__list-item">Skills</li>
-                <li class="header__navbar__list-item">Contact</li>
+                <li class="header__navbar__list-item"><a class="header__navbar__list-item-link" href="#about">About</a></li>
+                <li class="header__navbar__list-item"><a class="header__navbar__list-item-link" href="#works">Works</a></li>
+                <li class="header__navbar__list-item"><a class="header__navbar__list-item-link" href="#skills">Skills</a></li>
+                <li class="header__navbar__list-item"><a class="header__navbar__list-item-link" href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>test</h1>
+        <h1 class="main__title">About</h1>
 
 
     </main>
